--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
       min-height: 100px;
     }
 
+    .navbar-brand {
+
+      font-size: 40px;
+
+    }
+
     .backgroundclass {
       font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       font-size: 18px;
       line-height: 34px;
       color: #777777;
       background: url("assets/images/concrete_seamless.png");
+      position: relative;
+      min-height: 100vh;
+      padding-bottom: 2.5rem;
     }
 
     img {
@@ -37,12 +46,13 @@
       bottom: 0;
       left: 0;
       right: 0;
-      z-index: $zindex-fixed;
-      min-height: 100px;
+      min-height: 50px;
       font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       font-size: 18px;
       line-height: 34px;
       color: #ffffff;
+      position: fixed;
+      height: 2.5rem;
     }
   </style>
 
@@ -56,13 +66,13 @@
       <a class="navbar-brand" href="#">Stephen Madison</a>
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0 b4end">
         <li class="nav-item">
-          <a class="nav-link" href="/index.html">About</a>
+          <a class="nav-link" href="index.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -74,7 +84,7 @@
         <div class="col">
           <h1>About Me</h1>
 
-          <img src="assets/images/cat.jpg" class="img-fluid" alt="Me">
+          <img src="assets/images/cat.jpg" class="img-fluid px-3" alt="Me">
 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc
             porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa.
