--- a/portfolio.html
+++ b/portfolio.html
@@ -1,110 +1,208 @@
 <!doctype html>
 <html lang="en-us">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>About | Your Name</title>
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-  
-      .navbar {
-        min-height: 100px;
-      }
-  
-      .backgroundclass {
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        font-size: 18px;
-        line-height: 34px;
-        color: #777777;
-        background: url("assets/images/concrete_seamless.png");
-      }
-  
-      img {
-        width: 200px;
-        float: left;
-      }
-  
-      footer {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: $zindex-fixed;
-        min-height: 100px;
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        font-size: 18px;
-        line-height: 34px;
-        color: #ffffff;
-      }
-    </style>
-  
-  </head>
-  
-  
-  
-  <body class="backgroundclass">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-      <div class="container">
-        <a class="navbar-brand" href="#">Stephen Madison</a>
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0 b4end">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>About | Your Name</title>
+  <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Portfolio</h1>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+    .navbar {
+      min-height: 100px;
+    }
 
-        <h3>Word Guess</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+    .navbar-brand {
 
-        <h3>RPG Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+      font-size: 40px;
 
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+    }
 
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+    .backgroundclass {
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      font-size: 18px;
+      line-height: 34px;
+      color: #777777;
+      background: url("assets/images/concrete_seamless.png");
+      position: relative;
+      min-height: 100vh;
+      padding-bottom: 2.5rem;
+    }
 
-        <h3>Rock Paper Scissors</h3>
-      </div>
+    img {
+      width: 200px;
+      float: left;
+    }
 
-    </section>
+    footer {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      min-height: 50px;
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      font-size: 18px;
+      line-height: 34px;
+      color: #ffffff;
+      position: fixed;
+      height: 2.5rem;
+    }
+    
+    
+    /*Portfolio*/
 
-  </div>
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+  background-color: white;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  top: 50%;
+  max-width: 960px;
+}
+
+.column {
+  flex: 50%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+}
+
+.text-block-1 {
+  position: absolute;
+  top: 1%;
+  left: 3%;
+  background-color: #4aaaa5;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.text-block-2 {
+  position: absolute;
+  top: 1%;
+  left: 52%;
+  background-color: #4aaaa5;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.text-block-3 {
+  position: absolute;
+  top: 18%;
+  left: 3%;
+  background-color: #4aaaa5;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.text-block-4 {
+  position: absolute;
+  top: 18%;
+  left: 52%;
+  background-color: #4aaaa5;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.text-block-5 {
+  position: absolute;
+  top: 35%;
+  left: 3%;
+  background-color: #4aaaa5;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.text-block-6 {
+  position: absolute;
+  top: 68%;
+  left: 3%;
+  background-color: #4aaaa5;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+  </style>
+
+</head>
+
+
+
+<body class="backgroundclass">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+    <div class="container">
+      <a class="navbar-brand" href="#">Stephen Madison</a>
+      <ul class="navbar-nav ml-auto mt-2 mt-lg-0 b4end">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+
+  <div class="row">
+        <div class="column">
+            <img src="assets/images/technics-q-c-640-480-1.jpg" style="width:100%">
+            <div class="text-block-1">
+                <p>Business Stuff 1</p>
+            </div>
+            <img src="assets/images/technics-q-c-640-480-2.jpg" style="width:100%">
+            <div class="text-block-2">
+                <p>Business Stuff 2</p>
+            </div>
+        </div>
+        <div class="column">
+            <img src="assets/images/technics-q-c-640-480-5.jpg" style="width:100%">
+            <div class="text-block-3">
+                <p>Business Stuff 3</p>
+            </div>
+            <img src="assets/images/technics-q-c-640-480-7.jpg" style="width:100%">
+            <div class="text-block-4">
+                <p>Business Stuff 4</p>
+            </div>
+        </div>
+        <div class="column">
+            <img src="assets/images/technics-q-c-640-480-9.jpg" style="width:100%">
+            <div class="text-block-5">
+                <p>Business Stuff 5</p>
+            </div>
+            <img src="assets/images/technics-q-c-640-480-9.jpg" style="width:100%">
+            <div class="text-block-6">
+                <p>Business Stuff 6</p>
+            </div>
+        </div>
+
+    </div>
 
   <footer class="bg-primary">
     <div class="text-center py-3">
-      © 2019 Copyright:
+      © 2019 Copyright
     </div>
   </footer>
 
