--- a/index.html
+++ b/index.html
@@ -5,62 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>About | Your Name</title>
-  <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-
-    .navbar {
-      min-height: 100px;
-    }
-
-    .navbar-brand {
-
-      font-size: 40px;
-
-    }
-
-    .backgroundclass {
-      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-      font-size: 18px;
-      line-height: 34px;
-      color: #777777;
-      background: url("assets/images/concrete_seamless.png");
-      position: relative;
-      min-height: 100vh;
-      padding-bottom: 2.5rem;
-    }
-
-    img {
-      width: 200px;
-      float: left;
-    }
-
-    footer {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      min-height: 50px;
-      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-      font-size: 18px;
-      line-height: 34px;
-      color: #ffffff;
-      position: fixed;
-      height: 2.5rem;
-    }
-  </style>
-
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-
-
-<body class="backgroundclass">
+<body class="backgroundclass position-relative">
   <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
     <div class="container">
       <a class="navbar-brand" href="#">Stephen Madison</a>
@@ -78,13 +28,13 @@
     </div>
   </nav>
 
-  <div class="backgroundclass">
-    <div class="container">
+  <div class="backgroundclass position-relative">
+    <div class="container border my-4 con">
       <div class="row py-5">
         <div class="col">
           <h1>About Me</h1>
 
-          <img src="assets/images/cat.jpg" class="img-fluid px-3" alt="Me">
+          <img src="assets/images/cat.jpg" class="img-fluid px-3 " alt="Me">
 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc
             porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa.
