--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     </div>
   </nav>
 
-  <div class= "backgroundclass py-5 my-5">
+  <div class= "backgroundclass position-relative py-5 my-5">
     <form>
       <div class="row justify-content-md-center">
         <div class="col-md-6">
