--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body class="backgroundclass position-relative">
+<body class="backgroundclass position-relative position-relative">
   <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
     <div class="container">
       <a class="navbar-brand" href="#">Stephen Madison</a>
@@ -28,7 +28,7 @@
     </div>
   </nav>
 
-  <div class="backgroundclass position-relative">
+  <div class="backgroundclass position-relative position-relative">
     <div class="container border my-4 con">
       <div class="row py-5">
         <div class="col">
