--- a/index.html
+++ b/index.html
@@ -36,16 +36,21 @@
 
           <img src="assets/images/cat.jpg" class="img-fluid px-3 " alt="Me">
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc
-            porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa.
-            Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae
-            sollicitudin consectetur.</p>
+          <p>Dynamic and talented Information Technology expert, offering broad achievements and experience in project management, systems and network analysis, and risk mitigation. Provides influential leadership to teams and maximizes performance and potential. Recognized as a subject matter expert in the resolution of complex technical issues and the management of systems; proactively identifies new requirements, presents innovative solutions, and generates opportunities. Ability to pinpoint critical system failures and ensure timely resolution.</p>
 
-          <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id
-            eros iaculis, pulvinar quam eget, egestas mauris.</p>
+          <p>• ITIL® V3 Foundation Certified
+            • QuickBase App Builder Certifed
+            • CompTIA A+ Certified
+            • System Analysis and Optimization
+            • Global Information - Management
+            • Asset Management and Budgeting	
+            • Complex Projects/Process Leadership
+            • Leadership, Mentoring and Coaching
+            • Systems Reengineering/Management	
+            • Quality Control/Problems Resolution
+            • Solutions Management & Evaluation</p>
 
-          <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et
-            mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+          <p>Technology Snapshot: • I.T. Management • ITIL V3 Foundation • QuickBase • Microsoft Office Suite • Microsoft Windows • Exchange • Enterprise Desktop Support • Enterprise-Wide Imaging Tools • Virtual Machines • Apple Proficient • Android Proficient • Inventory Management • Active Directory • Virus Remediation • Help Desk Solutions • Printer Support </p>
         </div>
       </div>
     </div>
