--- a/portfolio.html
+++ b/portfolio.html
@@ -34,48 +34,41 @@
 <div class="container">
   <div class="row justify-content-md-center py-5">
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="Business Stuff 1" style="width: 75%">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="GifTastic" style="width: 75%">
       <div class="text-block-1">
-        <p>Business Stuff 1</p>
+        <p>GifTastic</p>
       </div>
     </div>
 
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="Business Stuff 1" style="width: 75%">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="Simpsons Hangman" style="width: 75%">
       <div class="text-block-2">
-        <p>Business Stuff 2</p>
+        <p>Simpsons Hangman</p>
       </div>
     </div>
   </div>
 
   <div class="row justify-content-md-center py-5">
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-5.jpg" alt="Business Stuff 1" style="width: 75%">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-5.jpg" alt="Street Fighter RPG" style="width: 75%">
       <div class="text-block-3">
-        <p>Business Stuff 3</p>
+        <p>Street Fighter RPG</p>
       </div>
     </div>
 
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Business Stuff 1" style="width: 75%">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Trippin" style="width: 75%">
       <div class="text-block-4">
-        <p>Business Stuff 4</p>
+        <p>Trippin</p>
       </div>
     </div>
   </div>
 
   <div class="row justify-content-md-center py-5">
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="Business Stuff 1" style="width: 75%">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS Multiplayer" style="width: 75%">
       <div class="text-block-5">
-        <p>Business Stuff 5</p>
-      </div>
-    </div>
-
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="Business Stuff 1" style="width: 75%">
-      <div class="text-block-6">
-        <p>Business Stuff 6</p>
+        <p>Rock Paper Scissors Multiplayer</p>
       </div>
     </div>
   </div>
