--- a/portfolio.html
+++ b/portfolio.html
@@ -34,14 +34,16 @@
 <div class="container">
   <div class="row justify-content-md-center py-5">
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="GifTastic" style="width: 75%">
+        <a href="https://smadison81.github.io/GifTastic/">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="GifTastic" style="width: 75%"></a>
       <div class="text-block-1">
         <p>GifTastic</p>
       </div>
     </div>
 
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="Simpsons Hangman" style="width: 75%">
+        <a href="https://smadison81.github.io/hangman/">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="Simpsons Hangman" style="width: 75%"></a>
       <div class="text-block-2">
         <p>Simpsons Hangman</p>
       </div>
@@ -50,14 +52,16 @@
 
   <div class="row justify-content-md-center py-5">
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-5.jpg" alt="Street Fighter RPG" style="width: 75%">
+        <a href="https://smadison81.github.io/unit-4-game/">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-5.jpg" alt="Street Fighter RPG" style="width: 75%"></a>
       <div class="text-block-3">
         <p>Street Fighter RPG</p>
       </div>
     </div>
 
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Trippin" style="width: 75%">
+        <a href="https://smadison81.github.io/Project-1/">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Trippin" style="width: 75%"></a>
       <div class="text-block-4">
         <p>Trippin</p>
       </div>
@@ -66,7 +70,8 @@
 
   <div class="row justify-content-md-center py-5">
     <div class="col-md-4 col-sm-6 col-xs-12">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS Multiplayer" style="width: 75%">
+        <a href="https://github.com/smadison81/RPS-Multiplayer">
+      <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS Multiplayer" style="width: 75%"></a>
       <div class="text-block-5">
         <p>Rock Paper Scissors Multiplayer</p>
       </div>
