--- a/contact.html
+++ b/contact.html
@@ -14,22 +14,25 @@
 
 
 <body class="backgroundclass position-relative">
-  <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-    <div class="container">
-      <a class="navbar-brand" href="#">Stephen Madison</a>
-      <ul class="navbar-nav ml-auto mt-2 mt-lg-0 b4end">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <div class="container">
+          <a class="navbar-brand" href="#">Stephen Madison</a>
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0 b4end">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://smadison81.github.io/resume/">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
   <div class= "backgroundclass position-relative py-5 my-5">
     <form>
