--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>About | Your Name</title>
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -22,7 +23,10 @@
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="https://smadison81.github.io/resume/">Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/stephendmadison/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
         </li>
       </ul>
     </div>
@@ -36,21 +40,29 @@
 
           <img src="assets/images/cat.jpg" class="img-fluid px-3 " alt="Me">
 
-          <p>Dynamic and talented Information Technology expert, offering broad achievements and experience in project management, systems and network analysis, and risk mitigation. Provides influential leadership to teams and maximizes performance and potential. Recognized as a subject matter expert in the resolution of complex technical issues and the management of systems; proactively identifies new requirements, presents innovative solutions, and generates opportunities. Ability to pinpoint critical system failures and ensure timely resolution.</p>
+          <p>Dynamic and talented Information Technology expert, offering broad achievements and experience in project
+            management, systems and network analysis, and risk mitigation. Provides influential leadership to teams and
+            maximizes performance and potential. Recognized as a subject matter expert in the resolution of complex
+            technical issues and the management of systems; proactively identifies new requirements, presents innovative
+            solutions, and generates opportunities. Ability to pinpoint critical system failures and ensure timely
+            resolution.</p>
 
           <p>• ITIL® V3 Foundation Certified
             • QuickBase App Builder Certifed
             • CompTIA A+ Certified
             • System Analysis and Optimization
             • Global Information - Management
-            • Asset Management and Budgeting	
+            • Asset Management and Budgeting
             • Complex Projects/Process Leadership
             • Leadership, Mentoring and Coaching
-            • Systems Reengineering/Management	
+            • Systems Reengineering/Management
             • Quality Control/Problems Resolution
             • Solutions Management & Evaluation</p>
 
-          <p>Technology Snapshot: • I.T. Management • ITIL V3 Foundation • QuickBase • Microsoft Office Suite • Microsoft Windows • Exchange • Enterprise Desktop Support • Enterprise-Wide Imaging Tools • Virtual Machines • Apple Proficient • Android Proficient • Inventory Management • Active Directory • Virus Remediation • Help Desk Solutions • Printer Support </p>
+          <p>Technology Snapshot: • I.T. Management • ITIL V3 Foundation • QuickBase • Microsoft Office Suite •
+            Microsoft Windows • Exchange • Enterprise Desktop Support • Enterprise-Wide Imaging Tools • Virtual Machines
+            • Apple Proficient • Android Proficient • Inventory Management • Active Directory • Virus Remediation • Help
+            Desk Solutions • Printer Support </p>
         </div>
       </div>
     </div>
@@ -66,14 +78,14 @@
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 </body>
 
 
