--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>About | Your Name</title>
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -25,62 +27,71 @@
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="https://smadison81.github.io/resume/">Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/stephendmadison/"><i class="fa fa-linkedin"
+              aria-hidden="true"></i></a>
         </li>
       </ul>
     </div>
   </nav>
 
-<div class="container">
-  <div class="row justify-content-md-center py-5">
-    <div class="col-md-4 col-sm-6 col-xs-12">
+  <div class="container">
+    <div class="row justify-content-md-center py-5">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <a href="https://smadison81.github.io/GifTastic/">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="GifTastic" style="width: 75%"></a>
-      <div class="text-block-1">
-        <p>GifTastic</p>
+          <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="GifTastic"
+            style="width: 75%"></a>
+        <div class="text-block-1">
+          <p>GifTastic</p>
+        </div>
       </div>
-    </div>
 
-    <div class="col-md-4 col-sm-6 col-xs-12">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <a href="https://smadison81.github.io/hangman/">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="Simpsons Hangman" style="width: 75%"></a>
-      <div class="text-block-2">
-        <p>Simpsons Hangman</p>
+          <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="Simpsons Hangman"
+            style="width: 75%"></a>
+        <div class="text-block-2">
+          <p>Simpsons Hangman</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="row justify-content-md-center py-5">
-    <div class="col-md-4 col-sm-6 col-xs-12">
+    <div class="row justify-content-md-center py-5">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <a href="https://smadison81.github.io/unit-4-game/">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-5.jpg" alt="Street Fighter RPG" style="width: 75%"></a>
-      <div class="text-block-3">
-        <p>Street Fighter RPG</p>
+          <img class="img-responsive" src="assets/images/technics-q-c-640-480-5.jpg" alt="Street Fighter RPG"
+            style="width: 75%"></a>
+        <div class="text-block-3">
+          <p>Street Fighter RPG</p>
+        </div>
       </div>
-    </div>
 
-    <div class="col-md-4 col-sm-6 col-xs-12">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <a href="https://smadison81.github.io/Project-1/">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Trippin" style="width: 75%"></a>
-      <div class="text-block-4">
-        <p>Trippin</p>
+          <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Trippin"
+            style="width: 75%"></a>
+        <div class="text-block-4">
+          <p>Trippin</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="row justify-content-md-center py-5">
-    <div class="col-md-4 col-sm-6 col-xs-12">
+    <div class="row justify-content-md-center py-5">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <a href="https://github.com/smadison81/RPS-Multiplayer">
-      <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS Multiplayer" style="width: 75%"></a>
-      <div class="text-block-5">
-        <p>Rock Paper Scissors Multiplayer</p>
+          <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS Multiplayer"
+            style="width: 75%"></a>
+        <div class="text-block-5">
+          <p>Rock Paper Scissors Multiplayer</p>
+        </div>
       </div>
     </div>
-  </div>
 
   </div>
 
-</div>
+  </div>
   <footer class="bg-primary">
     <div class="text-center py-3">
       © 2019 Copyright
@@ -89,14 +100,14 @@
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
