--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 
     <div class="row justify-content-md-center py-5">
       <div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="https://github.com/smadison81/RPS-Multiplayer">
+        <a href="https://smadison81.github.io/RPS-Multiplayer/">
           <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS Multiplayer"
             style="width: 75%"></a>
         <div class="text-block-5">
