--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 
   <footer class="bg-primary">
     <div class="text-center py-3">
-      © 2019 Copyright:
+      © 2019 Copyright
     </div>
   </footer>
 
