--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <footer class="bg-primary">
     <div class="text-center py-3">
-      © 2019 Copyright:
+      © 2019 Copyright
     </div>
   </footer>
 
