--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
           <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="GifTastic"
             style="width: 75%"></a>
         <div class="text-block-1">
-          <p>GifTastic</p>
+            <a href="https://github.com/smadison81/GifTastic"><p>GifTastic - Github</p></a>
         </div>
       </div>
 
@@ -53,7 +53,7 @@
           <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="Simpsons Hangman"
             style="width: 75%"></a>
         <div class="text-block-2">
-          <p>Simpsons Hangman</p>
+            <a href="https://github.com/smadison81/hangman"><p>Simpsons Hangman - Github</p></a>
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
           <img class="img-responsive" src="assets/images/technics-q-c-640-480-5.jpg" alt="Street Fighter RPG"
             style="width: 75%"></a>
         <div class="text-block-3">
-          <p>Street Fighter RPG</p>
+            <a href="https://github.com/smadison81/unit-4-game"><p>Street Fighter RPG - Github</p></a>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
           <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Trippin"
             style="width: 75%"></a>
         <div class="text-block-4">
-          <p>Trippin</p>
+            <a href="https://github.com/smadison81/Project-1"><p>Trippin - Github</p></a>
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@
           <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS Multiplayer"
             style="width: 75%"></a>
         <div class="text-block-5">
-          <p>Rock Paper Scissors Multiplayer</p>
+            <a href="https://github.com/smadison81/RPS-Multiplayer"><p>RPS Multiplayer - Github</p></a>
         </div>
       </div>
     </div>
